Fixed z-index

--- a/Gorjanc/wwwroot/css/site.css
+++ b/Gorjanc/wwwroot/css/site.css
@@ -100,7 +100,7 @@ body {
 
 #map {
   height: 80vh;
-  z-index: -1;
+  z-index: 0;
 }
 
 #vreme {
